@@ -2,6 +2,7 @@ lintian-brush (0.22) UNRELEASED; urgency=medium
 
   * Ignore github URLs with just a single paths component when looking
     for repo URLs.
+  * Support upgrading from --no-restart-on-upgrade
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 10 Aug 2019 16:49:28 +0000
 
